[gd_scene load_steps=4 format=3 uid="uid://b0ur6xwdqfbtk"]

[ext_resource type="FontFile" uid="uid://dflg3bb1odgoy" path="res://resources/Fonts/Paultine Groovy.otf" id="1_fl1xu"]
[ext_resource type="Script" path="res://scenes/user_interface/ui.gd" id="1_vf08o"]
[ext_resource type="AudioStream" uid="uid://cbsotfvng7cxq" path="res://resources/audio/click.mp3" id="3_avmys"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_vf08o")

[node name="Player1Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.0
offset_top = -1.0
offset_right = -24.0
offset_bottom = 144.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_fl1xu")
theme_override_font_sizes/font_size = 50
text = "0"

[node name="Player2Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 23.0
offset_top = -1.0
offset_right = 63.0
offset_bottom = 144.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_fl1xu")
theme_override_font_sizes/font_size = 50
text = "0"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.537255, 0.537255, 0.537255, 0.862745)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="Label" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fl1xu")
theme_override_font_sizes/font_size = 100
text = "PONG"

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_fl1xu")
text = "Play"

[node name="QuitButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_fl1xu")
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -177.0
offset_right = 52.0
grow_horizontal = 2
grow_vertical = 0

[node name="P1 CPU" type="CheckButton" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fl1xu")
text = "P1 CPU"

[node name="P2 CPU" type="CheckButton" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fl1xu")
text = "P2 CPU"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_avmys")
volume_db = 2.0

[connection signal="pressed" from="Control/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="Control/VBoxContainer/P1 CPU" to="." method="_on_p_1_cpu_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/P2 CPU" to="." method="_on_p_2_cpu_toggled"]
